<resources>
    <string name="app_name">Study Better</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="major_info">Major</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="education_level">Education_level</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="profile_fragment_minor">Minor</string>
    <string name="profile_fragment_school">School</string>
    <string name="profile_fragment_year">Year</string>
    <string name="profile_fragment_faculty">Faculty</string>
    <string name="edit_profile_name">Enter Name</string>
    <string name="edit_profile_school">Enter School(s)</string>
    <string name="edit_profile_year">Enter Year</string>
    <string name="edit_profile_minor">Enter Minor(s)</string>
    <string name="edit_profile_major">Enter Major(s)</string>
    <string name="edit_profile_faculty">Enter Faculty</string>
    <string name="edit_profile_education_level">Enter Education_level</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="edit_profile_save">Save</string>
    <string name="undefined">Undefined</string>
    <string name="chatgroup_enter_message">Enter message</string>
    <string name="message_content_undefined_text">UNDEFINED TEXT</string>
    <string name="message_content_undefined_user">UNDEFINED USER</string>
    <string name="message_content_undefined_date">UNDEFINED DATE</string>
    <string name="message_content_user_profile_picture">user profile picture</string>
    <string name="undefined_name">UNDEFINED NAME</string>
    <string name="undefined_type">UNDEFINED TYPE</string>
    <string name="no_friend_requests">No Friend Requests :(</string>
    <string name="so_empty_nsend_the_first_message">So empty...\nBe the one to\nsend the first message!</string>
    <string name="select_a_class">Select a Class</string>
</resources>