<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/edit_profile_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/black"
        android:text="Seperate multiple entries with commas. EG: University of Ablerta, University of Calgary"
        android:padding="15dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_profile_name"
        android:textColor="@color/black"
        android:hint="@string/edit_profile_name"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_profile_school"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_school"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <EditText
        android:id="@+id/edit_profile_education_level"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_education_level"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <EditText
        android:id="@+id/edit_profile_faculty"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_faculty"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        />
    <EditText
        android:id="@+id/edit_profile_major"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_major"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"/>
    <EditText
        android:id="@+id/edit_profile_minor"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_minor"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"/>
    <EditText
        android:id="@+id/edit_profile_year"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/edit_profile_year"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
       >
        <Button
            android:text="@string/edit_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="android:attr/buttonBarButtonStyle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <Button
            android:text="@string/edit_profile_save"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="android:attr/buttonBarButtonStyle"/>

    </LinearLayout>



</LinearLayout>