<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginVertical="10dp"
        android:id="@+id/studymaterial_message_content_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/default_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/message_content_user_profile_picture" />

    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/studymaterial_message_type"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undefined_type"
        app:layout_constraintBottom_toBottomOf="@+id/studymaterial_message_content_image"
        app:layout_constraintStart_toEndOf="@+id/studymaterial_message_content_image" />

    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/studymaterial_message_content_name"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undefined_name"
        app:layout_constraintBottom_toBottomOf="@+id/studymaterial_message_type"
        app:layout_constraintStart_toEndOf="@+id/studymaterial_message_type" />

    <TextView
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:id="@+id/studymaterial_message_content_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_content_undefined_user"
        app:layout_constraintStart_toEndOf="@+id/studymaterial_message_content_image"
        app:layout_constraintTop_toTopOf="@+id/studymaterial_message_content_image" />

    <TextView
        android:id="@+id/studymaterial_message_content_date"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/message_content_undefined_date"
        app:layout_constraintStart_toEndOf="@+id/studymaterial_message_content_user"
        app:layout_constraintTop_toTopOf="@+id/studymaterial_message_content_user" />



</androidx.constraintlayout.widget.ConstraintLayout>

