<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Profile_Fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/antiflash_white">
    <TextView
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
    </TextView>
    <ImageView
        android:id="@+id/profile_pic"
        android:src="@drawable/default_icon"
        android:background="@drawable/profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/profile_username_text"
            android:text="Placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:textColor="@color/black"/>
        <ImageButton
            android:id="@+id/profile_edit_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:layout_margin="20dp"
            android:src="@drawable/edit_icon"
            android:background="@null"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/profile_school_text"
        android:text="@string/profile_fragment_school"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/profile_education_level_text"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_level"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
    <TextView
        android:id="@+id/profile_faculty_text"
        android:text="@string/profile_fragment_faculty"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profile_major_text"
        android:textColor="@color/black"
        android:text="@string/major_info"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
    <TextView
        android:id="@+id/profile_minor_text"
        android:text="@string/profile_fragment_minor"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profile_year_text"
        android:text="@string/profile_fragment_year"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_gravity="left"
        android:id="@+id/profile_fragment_add_friend"
        android:src="@drawable/addfriendstock"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>